# IPC

./: README.md
AF_UNIX/: client.c  server.c
AF_UNIX/RTM_Project/: CMakeLists.txt  Makefile  client.c  sample Routing Entries.txt  server.c
AF_UNIX/RTM_Project/LL/: CMakeLists.txt  ll.c  ll.h  main.c
AF_UNIX/RTM_Project/RTManager/: CMakeLists.txt  rtmanager.c  rtmanager.h
AF_UNIX/RTM_Project/SyncMsgs/: CMakeLists.txt  syncmsg.c  syncmsg.h
AF_UNIX/Simplex/: server.c
AF_UNIX/multiplexing/: server.c
MsgQ/: Makefile  receiver.c  sender.c
